--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
+    "axios": "^1.2.0",
     "element-plus": "^2.2.25",
     "vee-validate": "^4.7.3",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
+    "vuex": "^4.1.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
