--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.2.0",
+    "dayjs": "^1.11.6",
     "element-plus": "^2.2.25",
     "jwt-decode": "^3.1.2",
     "vee-validate": "^4.7.3",
