--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:unit": "vitest --environment jsdom --root src/",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
@@ -34,6 +35,7 @@
     "@vue/test-utils": "^2.2.4",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.22.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
     "npm-run-all": "^4.1.5",
