--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "lint:scss": "npx stylelint \"**/*.scss\"",
+    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
@@ -41,6 +43,9 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "sass": "^1.56.1",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-config-standard-scss": "^11.0.0",
     "typescript": "~4.7.4",
     "unplugin-auto-import": "^0.12.0",
     "unplugin-vue-components": "^0.22.11",
