--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "test:unit": "vitest --environment jsdom --root src/",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
+    "lint:fix": "eslint --fix",
     "format": "prettier . --write",
     "lint:scss": "npx stylelint \"**/*.scss\"",
-    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
+    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{vue}": [
+      "yarn format",
+      "yarn lint",
+      "yarn lint:scss"
+    ]
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
@@ -39,7 +48,9 @@
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-vue": "^9.3.0",
+    "husky": "^8.0.3",
     "jsdom": "^20.0.3",
+    "lint-staged": "^14.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "sass": "^1.56.1",
